k8s/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: ms-be
  name: ms-be
spec:
  containers:
    - image: localhost:5000/ms-be:1.0.0
      name: ms-be
      ports:
        - containerPort: 8080
      imagePullPolicy: IfNotPresent
  restartPolicy: Never
