k8s/database-service.yaml
## Scenario 1 from https://cloud.google.com/blog/products/gcp/kubernetes-best-practices-mapping-external-services
kind: Service
apiVersion: v1
metadata:
  name: mysql
spec:
    type: ClusterIP
    ports:
      - port: 3306
        targetPort: 3306
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mysql
subsets:
  - addresses:
      - ip: 192.168.0.189
    ports:
      - port: 3306
